scss/partials/_navigation_sidebar.scss
@mixin default-item(){
  background-color: transparent;

  @include mobile() {
    height: 56px;
    padding: 16px 32px;
    border-top: 1px solid #ECECEC;

    &:last-child {
      border-bottom: 1px solid #ECECEC;
    }

    &:not(:last-child) {
      position: relative;
      &:after {
        content: "";
        position: absolute;
        width: calc(100% - 48px);
        left: 24px;
        bottom: 0px;
        height: 1px;
        background-color: $light_tan;
      }
    }
  }

  .internal {
    @include avenir_M();
    font-size: 14px;
    line-height: 25px;
    color: $ui_grey;
    text-decoration: none;

    &.new {
      @include avenir_M();
      color: $deep_navy;
    }

    @include mobile() {
      @include avenir_H();
      font-size: 14px;
      color: $deep_navy;
    }
  }

  div.drafts-label {
    @include avenir_M();
    font-size: 15px;
    line-height: 25px;
    color: $ui_grey;
    text-decoration: none;

    @include mobile() {
      @include avenir_H();
      font-size: 14px;
      color: $deep_navy;
    }

    span.count {
      @include avenir_M();
      font-size: 15px;
      color: #C5C6C8;

      @include mobile() {
        @include avenir_H();
        font-size: 14px;
      }
    }

    &.new {
      color: $deep_navy;
    }
  }

  div.all-posts-label {
    @include avenir_H();
    font-size: 15px;
    line-height: 25px;
    color: $deep_navy;
    text-decoration: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    // padding-top: 2px;

    @include mobile() {
      font-size: 14px;
    }

    span.count {
      @include avenir_M();
      font-size: 15px;
      color: #C5C6C8;
    }
  }
}

@mixin item-selected() {
  background-color: $feint_emerald;
  border-radius: 6px;

  @include mobile() {
    background-color: transparent;
    border-radius: 0px;
  }

  .internal, div.all-posts-label, div.drafts-label {
    color: $carrot_green;
    @include avenir_M();
    font-size: 14px;
    line-height: 25px;
    text-decoration: none;

    @include mobile() {
      @include avenir_H();
      font-size: 14px;
    }

    span.count {
      color: $carrot_green;

      @include mobile() {
        @include avenir_H();
        font-size: 14px;
      }
    }
  }

  div.all-posts-label, div.drafts-label {
    font-size: 15px;
  }

  div.all-posts-label {
    @include avenir_H();
  }
}

@mixin item-hover(){
  background-color: rgba($carrot_light_gray_4, 0.2);
  border-radius: 6px;

  @include mobile() {
    background-color: transparent;
    border-radius: 0px;
  }

  .internal {
    color: $deep_navy;
    @include avenir_M();
    font-size: 14px;
    line-height: 25px;
    text-decoration: none;

    @include mobile() {
      @include avenir_M();
    }
  }

  div.public, div.private, div.all-posts-icon {
    opacity: 1;
  }

  div.all-posts-label, div.drafts-label {
    color: $deep_navy;
    font-size: 15px;
    line-height: 25px;
    text-decoration: none;
  }
}
/* ... */

